Adds points get and limit on post endpoints
